--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="javascript.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <button class="rock">rock</button>
+      <button class="paper">paper</button>
+      <button class="scissors">scissors</button>
+    </div>
+  </body>
+  <script src="javascript.js"></script>
 </html>
